--- a/package.json
+++ b/package.json
@@ -19,8 +19,22 @@
     "url": "https://github.com/strongloop/strong-log-transformer/issues"
   },
   "homepage": "https://github.com/strongloop/strong-log-transformer",
+  "directories": {
+    "test": "test"
+  },
+  "bin": {
+    "strong-log-transformer": "bin/t.js"
+  },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tap test"
+  },
+  "dependencies": {
+    "byline": "^4.1.1",
+    "minimist": "^0.1.0",
+    "through": "^2.3.4"
+  },
+  "devDependencies": {
+    "tap": "git://github.com/strongloop/node-tap#production"
   }
 }
