--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "byline": "^4.1.1",
     "minimist": "^0.1.0",
+    "moment": "^2.6.0",
     "through": "^2.3.4"
   },
   "devDependencies": {
