Make transformer a duplex stream
Remove the destination option in favour of making the returned stream
a duplex stream allowing for src.pipe(transformer).pipe(destination).

This change breaks backward compatibility with the initial release.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "byline": "^4.1.1",
+    "duplexer": "^0.1.1",
     "minimist": "^0.1.0",
     "moment": "^2.6.0",
     "through": "^2.3.4"
