bin: strong-log-transformer to sl-log-transformer
The command was previously used for testing only and is an undocumented feature.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "test"
   },
   "bin": {
-    "strong-log-transformer": "bin/t.js"
+    "sl-log-transformer": "bin/sl-log-transformer.js"
   },
   "main": "index.js",
   "scripts": {
