Change to dual-license as Artistic/StrongLoop

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Stream transformer that prefixes lines with timestamps and other things.",
   "author": "Ryan Graham <ryan@strongloop.com>",
   "license": {
-    "name": "Dual MIT/StrongLoop",
-    "url": "https://github.com/strongloop/strong-log-transformer/blob/master/LICENSE"
+    "name": "Dual Artistic/StrongLoop",
+    "url": "https://github.com/strongloop/strong-log-transformer/blob/master/LICENSE.md"
   },
   "repository": {
     "type": "git",
