test: use official tap
Our fork has been merged upstream

--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
     "through": "^2.3.4"
   },
   "devDependencies": {
-    "tap": "git://github.com/strongloop/node-tap#production"
+    "tap": "^0.6.0"
   }
 }
