--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "tap test"
+    "test": "tap test/test-*"
   },
   "dependencies": {
     "byline": "^4.1.1",
@@ -37,6 +37,6 @@
     "through": "^2.3.4"
   },
   "devDependencies": {
-    "tap": "^0.6.0"
+    "tap": "^1.3.2"
   }
 }
