test: generate coverage reports
Use cobertura format because it works better for CI.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "tap test/test-*"
+    "test": "tap --coverage --coverage-report=cobertura test/test-*"
   },
   "dependencies": {
     "byline": "^4.1.1",
