test: expand line-merge test coverage
Ensure we cover the case where the first line of log input has trailing
whitespace.

Signed-off-by: Ryan Graham <r.m.graham@gmail.com>

--- a/test/fixtures/lineMerge.in
+++ b/test/fixtures/lineMerge.in
@@ -1,3 +1,4 @@
+  this line is just indented and not a continuation
 This is a line that is so long that
   it continues onto the next line!
 Imagine, if you will, a stacktr..SyntaxError: Unexpected identifier
