MAJOR: relicense under Apache 2.0 license
Signed-off-by: Ryan Graham <r.m.graham@gmail.com>

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "description": "Stream transformer that prefixes lines with timestamps and other things.",
   "author": "Ryan Graham <ryan@strongloop.com>",
-  "license": "Artistic-2.0",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "git://github.com/strongloop/strong-log-transformer"
