--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strong-log-transformer",
-  "version": "1.0.6",
+  "version": "2.0.0",
   "description": "Stream transformer that prefixes lines with timestamps and other things.",
   "author": "Ryan Graham <ryan@strongloop.com>",
   "license": "Artistic-2.0",
@@ -35,5 +35,8 @@
   },
   "devDependencies": {
     "tap": "^1.3.2"
+  },
+  "engines": {
+    "node": ">=4"
   }
 }
