src: replace through with plain stream.Transform
The convenience API provided by the through module is no longer worth
the cost of the dependency because the API provided by streams in core
is equally convenient for our uses.

Signed-off-by: Ryan Graham <r.m.graham@gmail.com>

--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "test": "tap --100 test/test-*"
   },
   "dependencies": {
-    "minimist": "^1.2.0",
-    "through": "^2.3.4"
+    "minimist": "^1.2.0"
   },
   "devDependencies": {
     "tap": "^12.0.1"
