--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "minimist": "^1.2.0",
-    "through": "^2.3.4"
+    "readable-stream": "^3.0.6"
   },
   "devDependencies": {
     "tap": "^12.0.1"
