--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,10 @@ node_js:
   - "6"
   - "8"
   - "10"
+
+matrix:
+  include:
+    - node_js: "4"
+      env: TEST_ARGS=--no-cov
+
+script: npm test -- ${TEST_ARGS}
